[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/forest/objects/OpenChestArea.gd" type="Script" id=1]
[ext_resource path="res://art/project-art/forest/closed_chest.png" type="Texture" id=2]
[ext_resource path="res://art/project-art/forest/opened_chest.png" type="Texture" id=3]
[ext_resource path="res://sound/forest/object/chest/chest.ogg" type="AudioStream" id=4]
[ext_resource path="res://art/project-art/png/HUD/ImanorBalloonx2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "closed",
"speed": 4.96
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "opened",
"speed": 1.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 0, 10 )

[node name="Open_chest_area" type="Area2D"]

position = Vector2( 126.904, 79.9423 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "closed"
playing = true
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -6.77715, -8.75501 )
scale = Vector2( 24.1121, 4.7763 )
shape = SubResource( 2 )

[node name="Open_se" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ChallengeFailedSign" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( -3, -19 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 95.5, 0.5, 34, 32 )
_sections_unfolded = [ "Region" ]

[connection signal="body_entered" from="." to="." method="_on_Open_chest_area_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_Open_chest_area_body_exited"]


